# invar

analysis/: .devcontainer.json  Manifest.toml  Project.toml  notebook.jl  scenario.yml
analysis/notebooks/: gen_scenario_ring.jl
analysis/results/: 18_knitro1.yml  18_knitro2.yml  19_knitro1.yml  19_knitro2.yml  20_knitro1.yml  21_knitro1.yml  22_knitro1.yml  22_knitro2.yml  23_knitro1.yml  23_knitro2.yml  24_knitro1.yml  24_knitro2.yml
analysis/src/: InvarAnalysis.jl  MmcQueue.jl  Optimizations.jl  Scenarios.jl
analysis/test/: runtests.jl
plots/: pyproject.toml  ring_cloud.ipynb  ring_knitro1.ipynb  ring_naive.ipynb
simulation/: .gitignore  pyproject.toml  run.sh  simulation_scenario.yml
simulation/results/: 18_knitro1.txt  19_knitro1.txt  20_knitro1.txt  21_knitro1.txt  22_knitro1.txt  23_knitro1.txt  24_knitro1.txt
simulation/src/: lb.py  main.py  predef.py  request.py  rng.py  scenario.py
