[tool.poetry]
name = "plots"
version = "0.1.0"
description = ""
authors = ["Bin Wang <binwang@umass.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.1"
matplotlib = "^3.7.2"
jupyterlab = "^4.0.3"
jupyter = "^1.0.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
